# sql-database

./: .gitignore  AGENTS.md  CLIENT-SERVER-ARCHITECTURE.md  CODECOV.md  Cargo.toml  DOC_TEST_FIXES.md  EXPRESSION_MACROS.md  LLM-CODECOV-GUIDE.md  LONG-TERM-ADDITIONS.md  SHORT-TERM-ADDITIONS.md  TASKS.md  TEST_MACROS_IMPLEMENTATION.md  justfile
.claude/commands/: coverage-improve.md  new-crate.md  reduce-cognitive-load.md
.claude/skills/cognitive-load-reviewer/: REFERENCE.md  SKILL.md
.claude/skills/rust-crate-creator/: REFERENCE.md  SKILL.md
.claude/skills/sql-db-architecture/: REFERENCE.md  SKILL.md
crates/btree/: Cargo.toml
crates/btree/src/: lib.rs  node.rs  page.rs  tests.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs  tests.rs  tests_macro_demo.rs
crates/catalog/: AGENTS.md  Cargo.toml
crates/catalog/src/: lib.rs
crates/client/: Cargo.toml  README.md
crates/client-cli/: Cargo.toml  README.md
crates/client-cli/src/: main.rs
crates/client/examples/: README.md  batch_insert.rs  concurrent_clients.rs  error_handling.rs  simple_client.rs
crates/client/src/: error.rs  lib.rs
crates/client/tests/: integration.rs
crates/common/: AGENTS.md  Cargo.toml
crates/common/src/: lib.rs  pretty.rs  tests.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/tests/: explain_analyze.rs  order_limit_offset.rs  raft_integration.rs
crates/executor/: CLAUDE.md  Cargo.toml  DESIGN.md  README.md
crates/executor/src/: builder.rs  dml.rs  filter.rs  join.rs  lib.rs  limit.rs  pk_index.rs  project.rs  scan.rs  sort.rs  tests.rs
crates/executor/src/tests/: helpers.rs  macro_demo.rs
crates/expr/: AGENTS.md  Cargo.toml
crates/expr/src/: lib.rs  tests.rs
crates/hash/: Cargo.toml
crates/hash/src/: lib.rs
crates/parser/: AGENTS.md  Cargo.toml
crates/parser/src/: ast.rs  lib.rs  tests.rs
crates/planner/: CLAUDE.md  Cargo.toml
crates/planner/src/: lib.rs  tests.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/raft/: Cargo.toml
crates/raft/src/: command.rs  config.rs  http_server.rs  lib.rs  log_storage.rs  network.rs  persistent_storage.rs  state_machine.rs  type_config.rs
crates/raft/tests/: activity_events_integration.rs  persistent_storage_integration.rs
crates/repl/: Cargo.toml
crates/repl/src/: database.rs  main.rs
crates/repl/src/tui/: app.rs  mod.rs  ui.rs
crates/repl/src/tui/meta_commands/: demo.rs  examples.rs  help.rs  mod.rs  reset.rs  schema.rs  tables.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: error.rs  main.rs
crates/server/src/tui/: app.rs  mod.rs  ui.rs
crates/server/tests/: integration.rs
crates/storage/: AGENTS.md  Cargo.toml
crates/storage/src/: lib.rs  tests.rs
crates/testsupport/: Cargo.toml  MACROS.md  proptest.toml
crates/testsupport/src/: assertions.rs  context.rs  fixtures.rs  lib.rs  macros.rs  proptest_generators.rs  runner.rs  server.rs
crates/testsupport/tests/: integration.rs
crates/types/: AGENTS.md  Cargo.toml
crates/types/src/: lib.rs
crates/wal/: Cargo.toml
crates/wal-viewer/: Cargo.toml
crates/wal-viewer/src/: main.rs
crates/wal/src/: lib.rs  tests.rs
scripts/: coverage.sh
