[workspace]
members = [
    "crates/types",
    "crates/common",
    "crates/expr",
    "crates/parser",
    "crates/catalog", "crates/storage",
]

resolver = "2"

[workspace.dependencies]
common = { path = "crates/common" }
expr = { path = "crates/expr" }
proptest = "1.9.0"
pretty_assertions = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlparser = "0.43"
tempfile = "3.23.0"
thiserror = "1.0.69"
types = { path = "crates/types" }
ahash = "0.8.12"
hashbrown = { version = "0.14.5", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
