[workspace]
members = [
    "crates/types",
    "crates/common",
    "crates/expr",
    "crates/parser",
    "crates/catalog",
    "crates/storage",
    "crates/buffer",
    "crates/wal",
    "crates/planner",
    "crates/executor",
]

resolver = "2"

[workspace.dependencies]
buffer = { path = "crates/buffer" }
catalog = { path = "crates/catalog" }
common = { path = "crates/common" }
executor = { path = "crates/executor" }
expr = { path = "crates/expr" }
parser = { path = "crates/parser" }
planner = { path = "crates/planner" }
storage = { path = "crates/storage" }
types = { path = "crates/types" }
wal = { path = "crates/wal" }
proptest = "1.9.0"
pretty_assertions = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlparser = "0.43"
tempfile = "3.23.0"
thiserror = "1.0.69"
ahash = "0.8.12"
hashbrown = { version = "0.14.5", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
lru = "0.12"
