[workspace]
members = [
    "crates/types",
    "crates/common",
    "crates/expr",
    "crates/parser",
    "crates/catalog",
    "crates/storage",
    "crates/buffer",
    "crates/wal",
    "crates/planner",
    "crates/executor",
    "crates/database",
    "crates/protocol",
    "crates/server",
    "crates/client",
    "crates/client-cli",
    "crates/wal-viewer",
    "crates/repl",
    "crates/testsupport",
]

resolver = "2"

[workspace.dependencies]
buffer = { path = "crates/buffer" }
catalog = { path = "crates/catalog" }
client = { path = "crates/client" }
common = { path = "crates/common" }
database = { path = "crates/database" }
executor = { path = "crates/executor" }
expr = { path = "crates/expr" }
parser = { path = "crates/parser" }
planner = { path = "crates/planner" }
protocol = { path = "crates/protocol" }
server = { path = "crates/server" }
storage = { path = "crates/storage" }
types = { path = "crates/types" }
wal = { path = "crates/wal" }
repl = { path = "crates/repl" }
testsupport = { path = "crates/testsupport" }
proptest = "1.9.0"
pretty_assertions = "1"
insta = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlparser = "0.43"
tempfile = "3.23.0"
thiserror = "1.0.69"
ahash = "0.8.12"
hashbrown = { version = "0.14.5", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
lru = "0.12"
bon = "3"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
tabled = "0.20.0"
rustyline = "13.0.0"
ratatui = "0.28"
crossterm = "0.28"
tui-textarea = "0.6"
syntect = { version = "5.2", default-features = false, features = ["parsing", "regex-fancy"] }
arboard = "3.4"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "sync", "macros", "fs", "io-util", "net", "signal"] }
