[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { workspace = true }
common = { workspace = true }
types = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
database = { workspace = true }
server = { workspace = true }
tokio = { workspace = true }
testsupport = { workspace = true }

[[example]]
name = "simple_client"
path = "examples/simple_client.rs"

[[example]]
name = "concurrent_clients"
path = "examples/concurrent_clients.rs"

[[example]]
name = "batch_insert"
path = "examples/batch_insert.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"
