[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
catalog = { workspace = true }
common = { workspace = true }
buffer = { workspace = true }
expr = { workspace = true }
parser = { workspace = true }
planner = { workspace = true }
executor = { workspace = true }
storage = { workspace = true }
types = { workspace = true }
wal = { workspace = true }
raft = { workspace = true }
tokio = { workspace = true }
openraft = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
num-integer = { workspace = true }
