[package]
name = "hash"
version = "0.1.0"
edition = "2021"

[dependencies]
catalog = { workspace = true }
common = { workspace = true }
types = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
