[package]
name = "raft"
version = "0.1.0"
edition = "2021"
description = "OpenRaft consensus integration for sql-database"

[dependencies]
# Workspace crates
common = { workspace = true }
types = { workspace = true }
catalog = { workspace = true }
storage = { workspace = true }
buffer = { workspace = true }

# External dependencies
openraft = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
