[package]
name = "repl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
parser = { workspace = true }
planner = { workspace = true }
executor = { workspace = true }
catalog = { workspace = true }
buffer = { workspace = true }
wal = { workspace = true }
common = { workspace = true }
types = { workspace = true }
tabled = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-textarea = { workspace = true }
syntect = { workspace = true }
arboard = { workspace = true }
