[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toydb-server"
path = "src/main.rs"

[dependencies]
database = { workspace = true }
protocol = { workspace = true }
common = { workspace = true }
types = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
client = { workspace = true }
testsupport = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
